@@ -133,6 +133,14 @@
 					"parent": "e_information"
 				},
 				{
+					"name": "e_navigation",
+					"parent": "00_electrons"
+				},
+				{
+					"name": "Navigation",
+					"parent": "e_navigation"
+				},
+				{
 					"name": "e_overviews",
 					"parent": "00_electrons"
 				},
@@ -880,7 +888,7 @@
 				{
 					"caption": "Header visibility",
 					"name": "header_visibility",
-					"description": "Do you want to display the header on this page? If you turn this off, the page starts with the content area but the navigation bar will still be visible.",
+					"description": "Do you want to display the header on this page? If you turn this off, the page starts with the content area but the navigation bar will still be visible. This setting is inherited by default, but you can change this with the Inheritance setting below.",
 					"type": "listbox",
 					"category": "Header",
 					"sortOrder": "1",
@@ -1263,6 +1271,46 @@
 					"inputProperties": {
 						"configs": "status_notes"
 					},
+					"templates": [
+						"Home",
+"Homepage",
+"BasicOverview",
+"Basic - Overview",
+"BasicDetail",
+"Basic - Detail",
+"HeaderVertical",
+"Header - Vertical",
+"Publications",
+"Publications - Overview",
+"Blog",
+"ArticleTraditional",
+"Article - Traditional",
+"ArticleReadability",
+"Article - Readability",
+"ArticleSidenotes",
+"Article - Sidenotes",
+"TeamMember",
+"Team - Member",
+"Team",
+"Client",
+"Organization",
+"Relation",
+"PortfolioProject",
+"Porfolio - Project",
+"Testimonial",
+"Review",
+"Endorsement"
+					]
+				},
+				{
+					"caption": "Toolbar visibility",
+					"name": "toolbar_visibility",
+					"description": "Do you want to display a toolbar on this page? The default toolbar contains breadcrumbs and search functionality. This setting is inherited on every child page.",
+					"type": "listbox",
+					"category": "Navigation",
+					"sortOrder": "1",
+					"defaultValue": "@INHERIT default",
+					"inputOptionValues": "On==1||Off==0||System default==default",
 					"templates": [
 						"Home",
 "Homepage",
