@@ -12,7 +12,12 @@
         &search=`0`
     ]]
 
-    [[$toolbarBasic]]
+    [[[[If?
+        &subject=`[[$toolbarBasicTheme]]`
+        &operator=`isnull`
+        &then=`$toolbarBasic`
+        &else=`$toolbarBasicTheme`
+    ]]]]
 
     <main id="main" role="main">
         <article id="content">
