@@ -15,7 +15,12 @@
         &search=`0`
     ]]
 
-    [[[[getResourceLevel:ne=`1`:then=`$toolbarBasic`]]]]
+    [[[[If?
+        &subject=`[[$toolbarBasicTheme]]`
+        &operator=`isnull`
+        &then=`$toolbarBasic`
+        &else=`$toolbarBasicTheme`
+    ]]]]
 
     <main id="main" role="main">
         <div class="ui very relaxed grid container">
